--- a/macos/rc.conf
+++ b/macos/rc.conf
@@ -1,2 +1,3 @@
 map ef eval if 'TMUX' in os.environ.keys(): fm.execute_console("shell tmux splitw -h 'nvim " + fm.thisfile.basename + "'")
+map es eval if 'TMUX' in os.environ.keys(): fm.execute_console("shell tmux splitw -v 'nvim " + fm.thisfile.basename + "'")
 
