--- a/apps/tmux/tmux.conf
+++ b/apps/tmux/tmux.conf
@@ -1,6 +1,3 @@
-# Ring the bell if any background window rang a bell
-set -g bell-action any
-
 # Keep your finger on ctrl, or don't
 bind-key ^D detach-client
 
@@ -29,6 +26,9 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Use vi keybindings in copy and choice modes
 setw -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'y' send -X copy-selection # Yank selection in copy mode.
 
 # easily toggle synchronization (mnemonic: e is for echo)
 # sends input to all panes in a given window.
@@ -38,6 +38,7 @@ bind E setw synchronize-panes off
 # set first window to index 1 (not 0) to map more to the keyboard layout...
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
+
 
 # color scheme (styled as vim-powerline)
 set -g status-left-length 52
@@ -58,6 +59,9 @@ unbind C-b
 set -g prefix C-a
 unbind-key C-a
 bind C-a send-prefix
+
+# set escape time
+set -sg escape-time 10
 
 # Auto renumber windows
 set -g renumber-windows on
