--- a/apps/tmux/tmux.conf
+++ b/apps/tmux/tmux.conf
@@ -24,6 +24,10 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+# Move windows left and right with Shift Left and Right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 # Use vi keybindings in copy and choice modes
 setw -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection # Begin selection in copy mode.
@@ -79,6 +83,10 @@ bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mod
 # force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# kill all panes except this one
+unbind b
+bind b kill-pane -a
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.user ]" 'source ~/.tmux.conf.user'
