added leader k to kill windows

--- a/apps/tmux/tmux.conf
+++ b/apps/tmux/tmux.conf
@@ -88,6 +88,10 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 unbind b
 bind b kill-pane -a
 
+# kill all windows except this one
+unbind k
+bind k kill-window -a
+
 # Local config
 if-shell "[ -f ~/.tmux.conf.user ]" 'source ~/.tmux.conf.user'
 
