--- a/apps/tmux/tmux.conf
+++ b/apps/tmux/tmux.conf
@@ -43,7 +43,6 @@ bind E setw synchronize-panes off
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
-
 # color scheme (styled as vim-powerline)
 set -g status-left-length 52
 set -g status-right-length 0
@@ -98,9 +97,9 @@ if-shell "[ -f ~/.tmux.conf.user ]" 'source ~/.tmux.conf.user'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
